Fix Sticky Logo Not Being Aligned

--- a/sass/site/primary/_masthead.scss
+++ b/sass/site/primary/_masthead.scss
@@ -99,7 +99,7 @@
 		}
 
 		@at-root #masthead.floating img.alt-logo-scroll {
-			display: block;
+			display: inline-block;
 		}
 	}
 
